fix: change gap size in our friends pets

--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -403,7 +403,7 @@ background-color: #FFFFFF;
     }
     .our-friends__cards {
         width:580px;
-        column-gap: 5.2vw;
+        column-gap: 40px;
         margin-bottom: 40px;
     }
 
